--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,11 +58,7 @@ steps:
     $cid    = "$(FOD_CLIENT_ID)"
     $csec   = "$(FOD_CLIENT_SECRET)"
 
-    # How long to wait (in minutes) before giving up
-    $maxWaitMinutes = 15
-    # How often to poll (in seconds)
-    $pollSeconds = 60
-
+    # --- OAuth Token ---
     Write-Host "Requesting OAuth token..."
     $tokenResp = Invoke-RestMethod -Method Post -Uri "$base/oauth/token" `
       -ContentType 'application/x-www-form-urlencoded' `
@@ -75,49 +71,74 @@ steps:
     $tok = $tokenResp.access_token
     if (-not $tok) { throw "No access_token returned from FoD." }
 
-    $elapsed = 0
-    $latest = $null
+    # --- Find most recent completed static scan ---
+    Write-Host "Fetching scans for release $relId..."
+    $scans = Invoke-RestMethod -Method Get -Uri "$base/api/v3/releases/$relId/scans?limit=50" `
+      -Headers @{ Authorization = "Bearer $tok" }
 
-    while ($elapsed -lt ($maxWaitMinutes*60)) {
-      Write-Host "Polling scans for release $relId (elapsed ${elapsed}s)..."
-      $scans = Invoke-RestMethod -Method Get -Uri "$base/api/v3/releases/$relId/scans?limit=50" `
-        -Headers @{ Authorization = "Bearer $tok" }
+    $latest = $scans.items |
+      Where-Object { $_.scanType -eq 'Static' -and $_.analysisStatusType -eq 'Completed' } |
+      Sort-Object -Property completedDateTime -Descending |
+      Select-Object -First 1
 
-      if ($scans.items) {
-        $latest = $scans.items |
-          Where-Object { $_.scanType -eq 'Static' -and $_.analysisStatusType -eq 'Completed' } |
-          Sort-Object -Property completedDateTime -Descending |
-          Select-Object -First 1
-      }
-
-      if ($latest) {
-        Write-Host "Found completed static scan: scanId=$($latest.scanId)"
-        break
-      }
-
-      Write-Host "No completed static scan yet, sleeping $pollSeconds seconds..."
-      Start-Sleep -Seconds $pollSeconds
-      $elapsed += $pollSeconds
-    }
-
-    if (-not $latest) {
-      throw "Timed out after $maxWaitMinutes minutes waiting for a completed static scan on release $relId."
-    }
+    if (-not $latest) { throw "No completed static scans found for release $relId." }
 
     $scanId = $latest.scanId
+    Write-Host "Most recent completed static scanId = $scanId"
+
+    # --- Prepare paths ---
     $outDir = "$(Build.ArtifactStagingDirectory)\FoD"
     New-Item -ItemType Directory -Force -Path $outDir | Out-Null
     $outFile = Join-Path $outDir ("scan-$scanId.fpr")
 
-    Write-Host "Downloading FPR for scanId=$scanId..."
-    Invoke-WebRequest -Method Get -Uri "$base/api/v3/scans/$scanId/fpr" `
-      -Headers @{ Authorization = "Bearer $tok" } -OutFile $outFile
+    # --- Download with retries ---
+    $maxRetries = 30      # ~30 minutes
+    $retryDelay = 60      # 60 seconds
+    $attempt = 0
+    $success = $false
 
-    Write-Host "FPR saved to $outFile"
-  displayName: "Download most recent completed FoD FPR (with wait/retry)"
+    while ($attempt -lt $maxRetries) {
+      Write-Host "Attempt $($attempt+1): downloading FPR for scanId=$scanId..."
+      $resp = Invoke-WebRequest -Method Get -Uri "$base/api/v3/scans/$scanId/fpr" `
+        -Headers @{ Authorization = "Bearer $tok" } -UseBasicParsing
+
+      if ($resp.ContentType -like "application/json*") {
+        Write-Host "Got JSON instead of FPR, likely not ready yet."
+        try {
+          $json = $resp.Content | ConvertFrom-Json
+          Write-Host "Response: $($json | ConvertTo-Json -Compress)"
+        } catch {
+          Write-Host "Non-FPR response: $($resp.Content)"
+        }
+        Start-Sleep -Seconds $retryDelay
+        $attempt++
+      }
+      else {
+        # Save raw bytes
+        [System.IO.File]::WriteAllBytes($outFile, $resp.Content)
+        $size = (Get-Item $outFile).Length
+        Write-Host "FPR saved to $outFile (size = $size bytes)"
+
+        if ($size -lt 50000) {
+          Write-Host "Downloaded file too small (<50 KB), retrying..."
+          Remove-Item $outFile -Force
+          Start-Sleep -Seconds $retryDelay
+          $attempt++
+        }
+        else {
+          $success = $true
+          break
+        }
+      }
+    }
+
+    if (-not $success) {
+      throw "Failed to download valid FPR after $maxRetries attempts."
+    }
+  displayName: "Download FoD FPR (with retry until valid)"
   env:
-    FOD_CLIENT_ID: $(FOD_CLIENT_ID)         # mark as secret in pipeline UI
-    FOD_CLIENT_SECRET: $(FOD_CLIENT_SECRET) # mark as secret in pipeline UI
+    FOD_CLIENT_ID: $(FOD_CLIENT_ID)
+    FOD_CLIENT_SECRET: $(FOD_CLIENT_SECRET)
 
 
 - task: PublishBuildArtifacts@1
